Report: Removed unnecessary comment, turned sentence into subsection.

--- a/report.tex
+++ b/report.tex
@@ -195,7 +195,7 @@
 %NAVrelatedwork
 \section{Related Work (~17pgs)}
 
-%Integrated development environments in the web browser.
+\subsection{Integrated development environments in the web browser}
 	%How to make IDE for GD?
 	%Let's first look at anything about IDEs.
 
@@ -232,9 +232,6 @@
 	Instead of displaying the contents of entire files, LightTable divides the code into meaningful units and displays them as small editors spread over the table's surface. 
 	In one of its experimental versions, LightTable also supported displaying running programs in the table. 
 	Figure \ref{fig:lt:draft:table} shows an example of this metaphor.
-
-	%Eu gosto da metáfora. Mas não consigo vendê-la aos cepticos; precisa de bastante espaço de ecrã. O que não é mau mas eles só pensam no agora.
-	%Maybe I'll have to add a phrase or two to clarify that I'm not targeting software development. Although I would love to be able to come up with something like this that worked for them.
 
 	\begin{figure}
 	  \centering
