Objectives: Minor corrections.

--- a/report.tex
+++ b/report.tex
@@ -168,18 +168,18 @@
 	The aim of this project is to provide architects and designers interested in creating 3D models with an environment that fosters the Generative Design approach while being accessible wherever they are working.
 
 	%Why does it need to be accessible wherever the architect is?
-	Architects imagine buildings and will have to move their ideas to outside of their heads wherever they are; if they don't, they might forget them forever. 
-	We have to provide a means to translate ideas and it has to be accessible wherever they are.\textsuperscript{citation needed}
+	Architects imagine buildings and will have to move their ideas outside of their heads wherever they are; if they don't, they might forget them forever. 
+	We have to provide means to translate ideas and it has to be accessible wherever they are.\textsuperscript{citation needed}
 	%TODO: Come up with an alternative to "translate ideas". Maybe "express ideas".
 
-	How can we provide a means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
+	How can we provide means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
 
 	When architects look for an environment to program they aren't looking for a software development \ac{ide} like Eclipse or Visual Studio. 
 	They only need an environment where they can write their program and see the results. 
 	All they want is accessible programming languages and environments.
 
 	%TODO: Rephrase the following paragraph since the well established tools were introduced earlier.
-	There are many well established tools that architects use to translate their ideas; if we're going to come up with a solution that can rival them than it must be as easy to try out as possible; and be able to integrate with them.
+	There are many well established tools that architects use to translate their ideas; if we're going to come up with a solution that can rival them then it must be as easy to try out as possible; and be able to integrate with them.
 	%Should I say how it integrates with them? Which is by offering the possibility of producing effects on their current tools, more specifically the CADs they use.
 
 	Summing up, the result of this project should:
