Related Work: Added section justifying need for a GD IDE.

--- a/report.tex
+++ b/report.tex
@@ -195,6 +195,39 @@
 %NAVrelatedwork
 \section{Related Work (~17pgs)}
 
+\subsection{IDE for GD}
+	Developing and maintaining large software systems is a complex task.
+	To deal with this complexity, software developers have many tools at their disposal and many of them are software themselves.
+	Things like generating diagrams from source code (like class hierarchy diagrams and control-flow diagrams), source code versioning and management, testing frameworks, issue trackers, refactoring, debuggers and code editors with syntax highlighting and code completion are some of them.
+
+	Using all of these tools in conjunction can be a difficult task since the developer needs to know the specific way to use each of them, both separately and together.
+	This difficulty gave rise to IDEs that integrate all of these tools in one user interface.
+	The IDE connects all the tools together so that developers don't have to worry about it and thus decreases the difficulty of using them all.
+	Overall IDEs decrease the complexity of developing large software.
+
+	What IDEs don't do is to decrease the amount of knowledge that their users have to have about software development.
+	The tools they provide are still the same that developers would use.
+	This is a problem that new software developers face and have to cope with.
+	Even with this problem, the gain software developers get when they know how to use IDEs outweighs it and so IDEs are popular among software developers.
+
+	Bringing more success to software developers makes one wonder whether IDEs can do the same to people programming for other purposes, such as Generative Design.
+	It is not as simple as showing the IDE to those people and hoping they will know how to use it.
+	Most probably they will just be scared off by the sheer amount of buttons and menus the IDE has.
+	The amount of time they would need to learn how to use it would be too much and they would rather do something else.
+	All those buttons and menus would act as a barrier, a barrier that would obscure the power hidden behind it.
+	They need different IDEs with tools adapted to their concerns.
+	The tools these IDEs should provide don't have to touch so many software development concerns and instead should focus on the specific needs of the area.
+	
+	In Generative Design, for example, displaying 3D models is an absolute necessity as 3D models are a great part of the final product of a program.
+	IDEs like Dynamo and Rosetta already provide this and have gone further.
+	Developing a new IDE for Generative Design requires us to study such IDEs.
+	It is also helpful to look at other IDEs that focus on concerns of people from yet other areas that still share a certain lack of knowledge of software development.
+	Tech savvy musicians use computers in live performances as their instruments and take advantage of their programmability through IDEs like Impromptu.
+	Designers and visual artists use Processing and its IDE, the PDE, to program for their projects.
+	Others can use IPython to document and inform their experiments by using Python's many libraries.
+	All of these provide inspiration for an IDE for Generative Design.
+
+
 \subsection{Integrated development environments in the web browser}
 	%How to make IDE for GD?
 	%Let's first look at anything about IDEs.
