Report: "Rosetta" has a citation. Less TODOs.

--- a/report.tex
+++ b/report.tex
@@ -156,9 +156,6 @@
 	Such environment will allow architects, or anyone interested in Generative Design, to edit Generative Design programs and visualize their results while not requiring any installation. 
 	It will thus allow them to do Generative Design on any computer that has a modern browser. 
 	Not being tied to a workstation will allow them to work closer to their clients and to more swiftly change their designs to accommodate the client's needs.
-	%TODO: Introduce the well established tools (ex: cads) that architects and designers use in their work.
-	%TODO: Introduce the concept of Generative Design approach so it can be used later. It isn't known to everybody.
-	%%%%Writing a program with a programming language is a great way to structure our thoughts. 
 
 %----------------------------------------------------
 %NAVobjectives
@@ -168,7 +165,6 @@
 	%Why does it need to be accessible wherever the architect is?
 	Architects imagine buildings and will have to move their ideas outside of their heads wherever they are; if they don't, they might forget them forever. 
 	We have to provide means to translate ideas and it has to be accessible wherever they are.\textsuperscript{citation needed}
-	%TODO: Come up with an alternative to "translate ideas". Maybe "express ideas".
 
 	How can we provide means to translate ideas? We make them translate the idea into a program, we encourage them to use Generative Design.
 
@@ -227,8 +223,8 @@
 	Others can use IPython to document and inform their experiments by using Python's many libraries.
 	All of these provide inspiration for an IDE for Generative Design.
 	
-	%Domain-specific IDEs.
-	\subsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
+%Domain-specific IDEs.
+\subsubsection{Impromptu\cite{sorensen2005impromptu}\cite{sorensen2010programming}}
 	Impromptu is a programming environment developed to explore manipulation of musical structure in live performance; an \ac{ide} for musicians and sound artists.
 	
 	%What is live-performance?
@@ -248,7 +244,8 @@
 	%Describe it as a creative tool. As a try of bringing live coding back to the stage (it states that it happened during late 80s and early 90s). It states that live coding performances are extensions to what is called laptop performances.
 	%Describe it as being a tool for people interested in making music.  probably have experience with synthesizer software but little programming experience.
 	%Maybe include link to live performance video.
-	\subsection{IPython\cite{PER-GRA:2007}}
+	
+\subsubsection{IPython\cite{PER-GRA:2007}}
 	IPython is a notepad-like environment directed towards providing better, more straightforward scientific computing. \emph{It makes me remember Mathematica's notebooks.} As its name suggests, IPython's main programming language is Python. 
 	While Python is its main programming language, other popular programming languages can be used in IPython, particularly those popular in the scientific community like R, Julia. \footnote{More language kernels can be found in IPython's github page: https://github.com/ipython/ipython/wiki/IPython-kernels-for-other-languages}
 	
@@ -281,8 +278,8 @@
 	IPython notebooks, more generally notebooks, are natural tools for exploration.
 	IPython notebooks don't provide domain specific functionality for architecture.
 	
-	%Domain-specific IDEs for graphics, games, 3d modeling and Generative Design.
-	\subsection{Processing\cite{reas2007processing}}
+%Domain-specific IDEs for graphics, games, 3d modeling and Generative Design.
+\subsubsection{Processing\cite{reas2007processing}}
 	Processing is a programming language and a development environment aimed at ``promoting software literacy in the visual arts and visual literacy within technology''.\footnote{www.processing.org} 
 	It has an heavy focus on encouraging interaction between its users and so has attracted a big community.\textsuperscript{citation needed}
 	
@@ -362,7 +359,7 @@
 	%Describe how little feedback the environment provides. E.g. he has to run the sketch to see if it compiles and runs as he expects. This blocks creation by reaction.
 	%Describe how trying to hide Java doesn't make it a better language for learning or producing art. For doing more advanced things, Processing still requires the programmer to know Java; why not learn Java straight away? Processing tries to hide Java's metaphors, its objects; bad idea. (Scala does a better job, I suppose)
 
-\subsection{DesignScript\cite{aish2012designscript}}
+\subsubsection{DesignScript\cite{aish2012designscript}}
 	%TODO collections can be used everywhere one thing can be used
 	%TODO handling collections (replication guides, etc)
 	DesignScript is a programming language that was designed to suite the needs of architecture related design and engineering.
@@ -437,7 +434,7 @@
 	%
 	%One way DesignScript tries to succeed is to integrate various ways of modeling into the design process. These various ways of modeling are direct-manipulation mode present in any 3d modeling application, the associative mode present in many visual programming environments and the 
 
-\subsection{Rosetta}
+\subsubsection{Rosetta\cite{de2012modern}}
 	Rosetta is a platform for Generative Design.
 	It grew from the desire to give the freedom to designers using the Generative Design to write their programs using the programming language they want and to easily switch where it takes effect.
 	
