--- a/report.tex
+++ b/report.tex
@@ -694,35 +694,36 @@
 \section{Architecture (2/3pgs)}
 
 \subsection{Aspects of the solution}
-	One aspect that has to be set is what is the language used to make the programs.
+	One aspect that has to be set is \textbf{what is the language} used to make the programs.
 	Associative vs imperative. 
 	With side-effects vs without side-effects.
+	Its syntax.
 
-	Another aspect is the amount of help or documentation or reaction the system has to support the user while he is thinking about and making the program.
+	Another aspect is the \textbf{amount of help, documentation or reaction} the system has to support the user while he is thinking about and making the program.
 	In an ideal scenario he is capable of either doing both at the same time or being able to switch \emph{modes} quickly without losing context. 
 	In the light of \cite{victor2012learnable}, the system should have good answers to the questions proposed on what is a good programming environment.
 
-	Another aspect is the implementation of primitives of the language like constructive solid geometry, lofts and sweeps. 
+	Another aspect is the \textbf{implementation of primitives} of the language like constructive solid geometry, lofts and sweeps. 
 	Many others are needed to make the system useful. 
 	Being useful is more important than the number of primitives implemented. 
 	This leads to other concern, these primitives have to have some correspondence to primitives available in other tools used in architecture.
 
 	For simplicity it is perhaps better to support only 3D modeling primitives as these can show immediate results for this thesis, e.g. energy consumption analysis is a concern in architecture but will not be immediately supported. Other modeling areas will be overlooked either because of the current lack of knowledge of the author and/or because of the added amount of effort to provide them.
 
-	Other aspect is how the system lets users document the programs they made. 
+	Other aspect is how the system lets users \textbf{document the programs} they made. 
 	It is characteristic to forget how some part of the program works and so documentation is needed (or anything that is faster to understand than to interpret the program directly). 
 	The system could support having drawings juxtaposed to the program in addition to previews of results like those present in DesignScript Studio, Dynamo and Grasshopper. 
 	It will also be useful to look at how current programming languages are usually documented. 
 	Other source of inspiration to draw from is Donald Knuth's Literate Programming.
 
-	Other aspect is the persistence of programs between usage sessions and in cases the system crashes.
+	Other aspect is the \textbf{persistence of programs} between usage sessions and in cases the system crashes.
 	In case of persistence between sessions, the user can close the browser or the tab at any moment, it would be useful to keep record of the current program in some way. 
 	In case of persistence in case of crashes, if the user program itself crashed the page it should not be executed immediately to allow its retrieval or edition (as it could crash the page again). 
 	With persistence of programs also comes the need for holding versions of the same program. 
 	These become useful as the user makes changes and wants to look back in time for some reason. 
 	Maybe because he did not anticipate the need for something he deleted or maybe because he wants to see how his programs have progressed.
 
-	Other aspect is the way programs can be applied to other modeling applications used by architects.
+	Other aspect is the way programs can be \textbf{applied to other modeling applications} used by architects.
 	Without a way to do this the system is rendered useless as it can hardly be integrated into the architect's normal process. 
 	Rosetta uses the concept of selecting a backend, a specific interface to a modeling application. 
 	After selecting a backend for a modeling application, Rosetta connects to it and results of running the program are passed to the application. 
